--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Graham was here!</h1>
 <p>A place to keep things organised.</p>
-<p>Just check to see if this still works!</p>
+<p>Just checking to see if this still works!</p>
+<p><em>Yes </em>it does!<p>
