--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Graham was here!</h1>
 <p>A place to keep things organised.</p>
 <p>Just checking to see if this still works!</p>
-<p><em>Yes </em>it does!<p>
+<p><em>Yes! </em>it does<p>
